# reliqua

./: .gitignore  LICENSE  README.md  pyproject.toml  reliqua.code-workspace  requirements.txt  setup.py
.cspell/: dictionary.txt
.github/workflows/: python-publish.yml  ruff.yml
example/: __init__.py  __main__.py
example/resources/: __init__.py  contact.py  files.py  form.py  health.py  media.py  servers.py  users.py
falcon_template/: __main__.py  app.py
falcon_template/resources/: base.py  users.py
falcon_template/swagger/: index.html  swagger-ui-bundle.js  swagger-ui.js  swagger-ui.js.map
src/reliqua/: __init__.py  api.py  app.py  auth.py  database.py  docs.py  exceptions.py  media_handlers.py  middleware.py  openapi.py  sphinx_parser.py  status_codes.py  swagger.py
src/reliqua/example/: __main__.py
src/reliqua/example/resources/: servers.py  users.py
src/reliqua/resources/: __init__.py  base.py
src/reliqua/swagger/: index.html
src/unrest/: middleware.py
src/unrest/example/: __main__.py
src/unrest/example/resources/: users.py
tests/: test_app.py  test_auth.py  test_database.py  test_exceptions.py  test_media_handlers.py  test_middleware.py  test_openapi.py  test_sphinx_parser.py  test_status_codes.py
